--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "dotenv": "^16.5.0",
+    "firebase": "^11.8.1",
     "lottie-react": "^2.4.1",
     "motion": "^12.15.0",
     "react": "^19.1.0",
